manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "myclusternew-15f6"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "myclusternew-15f6"
  template:
    metadata:
      labels:
        app: "myclusternew-15f6"
    spec:
      containers:
        - name: "myclusternew-15f6"
          image: "productioncrg.azurecr.io/myclusternew"
          ports:
          - containerPort: 8080
